--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "path": "^0.12.7",
     "postcss": "^8.3.11",
     "postcss-cli": "^9.0.1",
     "razorpay": "^2.8.0",
