--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.3.7",
     "axios": "^1.7.2",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^2.6.6",
     "nodemon": "^3.1.3",
     "passport": "^0.5.0",
